--- a/index.html
+++ b/index.html
@@ -133,5 +133,12 @@
         <p>&copy; 2025 Criado por ... Todos os direitos reservados.</p>
     </div> -->
 
+
+<p>
+ Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque, ipsam rerum alias vitae quidem unde accusamus natus dolores laboriosam nemo dignissimos dolorum deserunt quaerat, consequuntur enim vero repellendus reprehenderit explicabo!   
+</p>
+
 </body>
+
+
 </html>
