--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Eduardo Villela</title>
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/header.css">
+    <link rel="stylesheet" href="css/scrollbar.css">
     <link rel="stylesheet" href="css/main-home.css">
     <link rel="stylesheet" href="css/footer.css">   
     <link rel="stylesheet" href="css/text.css">
@@ -47,7 +48,7 @@
         </div>
 
         
-        <div class="hamburger" onclick="toggleMenu()">
+        <div class="hamburger">
             &#9776; <!-- Símbolo de hambúrguer -->
         </div>
         
