--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <div class="banner-background">
             <div class="banner">
                 <div>
-                    <h1><a href="index.html">Eduardo Villela</a></h1>
+                    <h1><a href="index.html">Eduardo Villela M. dos Reis</a></h1>
                     <h6><a href="index.html">Página Pessoal</a></h6>
                 </div>
                 <ul class="banner-list">
@@ -37,13 +37,13 @@
             <nav class="navbar mobile-menu">
                 <ul>
                     <li><a href="#">Sobre</a></li>
-                    <li><a href="#">Engenharia Mecânica</a></li>
-                    <li><a href="#">Histórico Acadêmico</a></li>
-                    <li><a href="#">Ciência</a></li>
-                    <li><a href="#">Projetos</a></li>
-                    <li><a href="#">Crônicas</a></li>
-                    <li><a href="#">Música</a></li>
-                    <li><a href="#">Contato</a></li>
+                    <li><a href="#">Formação</a></li>
+                    <li><a href="#">Publicações</a></li>
+                    <li><a href="#">Desafios</a></li>
+                    <!-- <li><a href="#">Projetos</a></li> -->
+                    <!-- <li><a href="#">Crônicas</a></li> -->
+                    <!-- <li><a href="#">Música</a></li> -->
+                    <!-- <li><a href="#">Contato</a></li> -->
                 </ul>
             </nav>
         </div>
@@ -63,9 +63,14 @@
 
             <article class="intro even-section">
                 <h2>Sobre</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur cum in, nisi alias placeat porro ullam. Iste quisquam impedit officiis suscipit eveniet exercitationem fugiat aut. Exercitationem dolorem vel repudiandae cumque?</p>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sunt labore architecto nesciunt sint quis atque nisi ducimus omnis deleniti tempora eaque commodi vero molestias, maiores enim dignissimos reprehenderit alias nam!</p>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cumque perferendis reprehenderit nostrum aperiam dolorum explicabo velit atque quae ipsam facilis quibusdam illum vel aliquid, non adipisci temporibus, natus iste deleniti?</p>
+                <ul>
+                   <li>Oi</li>
+                   <li>tudo bem?</li>
+                   <li>Sim!</li>
+
+                </ul>
+
+
             </article>
     
             <article class="projects odd-section">
