--- a/index.html
+++ b/index.html
@@ -22,9 +22,16 @@
             <h2>Sobre</h2>
             <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Accusamus error laudantium quaerat ducimus rerum dolorum eligendi nulla consectetur ratione tempora, nostrum minus commodi eos doloribus provident ad perspiciatis consequuntur et!</p>
             <ul>
-                <li>aaa</li>
-                <li>bbb</li>
-                <li>cbb</li>
+                <li>Possuo toda minha formação na área da Mecânica. Fiz curso técnico em Mecânica (2009) pelo CEFET/RJ, graduação (2016) e mestrado (2018) em 
+                    Engenharia Mecânica pela Universidade Federal Fluminense (UFF); e doutorado (2023) em Engenharia Mecânica pela Universidade Federal do Rio 
+                    de Janeiro (COPPE/UFRJ).</li>
+                <li>Atuei como pesquisador visitante (visiting scholar) na University of Aberdeen (Escócia) como parte do programa doutorado sanduíche. Trabalhei 
+                    com flambagem helicoidal de colunas de perfuração.</li>
+                <li>Trabalhei como pesquisador pós doutor (2023) no Núcleo Interdisciplinar de Dinâmica dos Fluidos (NIDF/UFRJ) com incrustação inorgânica em 
+                    escoamentos na indústria do petróleo. Trabalhei na parte experimental da pesquisa e modelagem do fenômeno. </li>
+                <li>Atuei como professor substituto do Instituto de Física da UFRJ (2023-2024). </li>    
+                <li>Atualmente trabalho na PETROBRAS com turbomáquinas utilizadas na produção de petróleo na área offshore, com foco em turbinas a gás aeroderivadas 
+                    e compressores centrífugos. </li>
             </ul>
         </section>
     </main>
